--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.15.3",
     "cross-env": "^3.2.3",
     "laravel-mix": "^0.8.3",
-    "mapbox-gl": "^0.33.1"
+    "mapbox-gl": "^0.33.1",
+    "turf": "^3.0.14"
   }
 }
