--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
+    "@mapbox/geojson-tidy": "^1.0.1",
     "axios": "^0.15.3",
     "cross-env": "^3.2.3",
     "laravel-mix": "^0.8.3",
